# GPSmax

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: tests.yml
config/: config.example.toml
docs/: GPS_Data_Workflow.md  GPS_Normalization_Workflow.md  GPS_SQLite_README.md  NORMALIZATION.md  ROADMAP.md  architecture_review.md
gpsmax/: __init__.py
gpsmax/formats/: gpx.py
gpsmax/util/: logging.py  paths.py  subprocess.py
scripts/ingest/: garmin_ingest.py
scripts/normalize/: gps_normalize.py
scripts/sql/: gps_schema.sql
src/gpsmax/: config.py  errors.py
src/gpsmax/analyze/: __main__.py  gpx_analyze.py  track.py
src/gpsmax/devices/: garmin.py  mtp.py
src/gpsmax/formats/: gpx.py
src/gpsmax/ingest/: __main__.py  garmin_ingest.py
src/gpsmax/normalize/: __main__.py  gps_normalize.py
src/gpsmax/sql/: __main__.py  gps_import_manifest.py
src/gpsmax/util/: fzf.py  hashing.py  logging.py  paths.py
src/gpsmax/visualize/: plot.py
tests/: conftest.py  test_ensure_mounted.py  test_garmin_classify.py  test_garmin_ingest_main_no_device.py  test_gpx_analyze.py  test_iter_gpx_files.py  test_smoke_imports.py
tests/data/: sample.gpx
